oxiplate-derive/tests/config/crates/unmatched-bracket/tests/broken/unmatched-bracket.stderr
error: Failed to parse `/oxiplate.toml`: Expected a string, found: BracketOpen[[]
 --> tests/broken/unmatched-bracket.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)
